--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./dist/src/app.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/src/app.js\"",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,15 +17,18 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   }
