--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node ./dist/src/app.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/src/app.js\"",
     "build": "npx tsc",
+    "format": "prettier --write \"**/*.js\"",
+    "check-format": "prettier --check \"**/*.js\"",
     "test": "jest"
   },
   "keywords": [],
@@ -30,6 +32,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "prettier": "3.1.1",
     "typescript": "^5.3.3"
   }
 }
